DDF-2644 Fix overflow issue on html / body

--- a/catalog/ui/catalog-ui-search/src/main/webapp/less/styles.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/less/styles.less
@@ -18,6 +18,7 @@ html, body {
   font-family: 'Open Sans Light';
   font-size: inherit;
   transition: font-size @coreTransitionTime ease-in-out;
+  overflow:hidden;
 }
 
 body {
